# FinalProjectTurtle

./: README.md  Robotics Final Project.pptx
Assets/: depth_Depth.raw  depth_Depth_metadata.csv  dot-1_Depth.raw  dot-1_Depth_metadata.csv  dot-2_Depth.raw  dot-2_Depth_metadata.csv
Assets/inside/: inside1_Color_inside2_Color.json  inside1_Depth.raw  inside1_Depth_metadata.csv  inside2_Depth.raw  inside2_Depth_metadata.csv
Assets/outside/: outside1_Depth.raw  outside1_Depth_metadata.csv  outside2_Depth.raw  outside2_Depth_metadata.csv  outside3_Depth.raw  outside3_Depth_metadata.csv  outside4_Depth.raw  outside4_Depth_metadata.csv  outside5_Depth.raw  outside5_Depth_metadata.csv
FeatureMatching/: camera_intrinsics.yaml  convertPixelTo3D.py  get2DCoord.py  getCameraConfig.py  image.ipynb  imageMatching.py  video.py
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: imu_player.pc  imu_recorder.pc  turtlebot_rescue.pc
devel/share/imu_player/cmake/: imu_playerConfig.cmake
movement_given/devel/: .catkin  local_setup.sh  setup.sh
movement_given/devel/lib/pkgconfig/: movement.pc
movement_given/src/movement/: CMakeLists.txt  package.xml
movement_given/src/movement/launch/: move_turtlebot.launch
movement_given/src/movement/src/: move_turtlebot.py
src/data/: imu_data.csv
src/image_to_transformation/: activate.ipynb  camera_intrinsics.yaml  convertPixelTo3D.py  getCameraConfig.py  image_to_trans.py  image_to_transformation.ipynb
src/imu_player/: CMakeLists.txt
src/imu_player/launch/: replay_imu.launch
src/imu_player/src/: replay_imu_node.py
src/imu_recorder/: CMakeLists.txt  package.xml
src/imu_recorder/launch/: record_imu.launch
src/imu_recorder/src/: record_imu_node.py
src/turtlebot_rescue/: CMakeLists.txt  moving_2d.py  moving_3d.py  package.xml  saving_2d_map.py  saving_3d_map.py
src/turtlebot_rescue/saved_data/: robot_odom.txt  robot_tf.txt  slam_map.pgm  slam_map.yaml
(+3 files in other folders)
