<?xml version="1.0"?>
<package format="2">
  <name>movement</name>
  <version>0.1.0</version>
  <description>Package for TurtleBot movement based on user input.</description>
  <maintainer email="youremail@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>

